app/sass/header/_head.scss
.header_index {
	background-image: url(../img/header-index-bg.png);
	background-position-x: center;
	background-repeat: no-repeat;
}

.mine__desc {
	position: relative;
	margin-top: 35px;
	display: flex;
	justify-content: space-between;
	z: 2;

	h2 {
		max-width: 463px;
		margin-top: 25px;
		font-size: 48px;
		font-weight: normal;
		line-height: 56px;
	}
}

.mine__calculator {
	position: relative;
	top: -47px;
	display: flex;
	flex-direction: column;
	padding: 26px 0;
	padding-right: 47px;
	padding-left: 32px;
	background-color: white;
	border-radius: 2px;
	box-shadow: 0 15px 33px 0 rgba(153,130,161,0.18);

	h3 {
		font-size: 24px;

	}

	.calculator__filter {
		display: flex;
		justify-content: space-between;
		align-items: center;

		.filter__buttons {
			display: flex;
			justify-content: flex-start;
		}

		.filter__button {
			padding: 10px 30px;
			font-weight: 15px;
			background-color: white;
			border: 1px solid #EBECF0;
			cursor: pointer;
		}

		.filter__button:first-child {
			border-right: none;
			border-top-left-radius: 4px;
			border-bottom-left-radius: 4px;
		}

		.filter__button:last-child {
			border-left: none;
			border-top-right-radius: 4px;
			border-bottom-right-radius: 4px;
		}

		.active_btn {
			color: white;
			background-color: #92278F;
			border: 1px solid #92278F;
		}
	}

	.calculator__desc {
		display: flex;

		.calculator__desc_block {
			width: 260px;
			margin-top: 27px;
			padding-top: 27px;
			padding-bottom: 34px;
			padding-left: 29px;

			&:first-of-type {
				background-color: #580056;
			}

			&:nth-of-type(2) {
				background-color: #6C0469;
			}

			&:nth-of-type(3) {
				background-color: #790276;
			}

			&:last-of-type {
				background-color: #92278F;
			}

			p {
				font-size: 13px;
				color: #E8EAEC;

				span {
					font-size: 24px;
					font-family: $montserratLight;
					color: white;
				}
			}
		}
	}
}

.header__pros {
	display: flex;
	justify-content: space-between;
}

.pension {
	display: flex;
	justify-content: space-between;
	max-width: 544px;
	width: 100%;
	height: 256px;
	padding-top: 21px;
	padding-right: 16px;
	padding-left: 32px;
	background-color: #92278F;

	.pension__desc {
		display: flex;
		flex-direction: column;
		margin-top: 14px;

		h4 {
			font-family: $montserrat;
			font-size: 24px;
			color: white;
			line-height: 1;
		}

		p {
			margin-top: 20px;
			font-size: 15px;
			color: white;
			line-height: 1.25;
		}

		a {
			width: 145px;
			margin-top: 40px;
			padding: 10px 0;
			font-family: $montserrat;
			font-size: 15px;
			color: #3B424B;
			text-align: center;
			text-shadow: 0 1px 0 0 rgba(255,255,255,0.5);
			background-color: white;
		}
	}
}

.tarifs,
.tablet {
	display: flex;
	justify-content: flex-start;
	flex-wrap: wrap;
	width: 256px;
	height: 256px;
	padding-top: 29px;
	padding-right: 55px;
	padding-left: 24px;

	h4 {
		width: 100%;
		font-family: $montserrat;
		font-size: 20px;
		line-height: 1;
	}

	p {
		width: 100%;
		font-size: 15px;
		line-height: 1.25;
	}

	img {
		align-self: flex-end;
	}
}

.tarifs {
	background-color: #F4F4F4;

	p {
		margin-top: 10px;
	}	
}

.tablet {
	padding-right: 25px;
	background-color: #3B424B;

	h4, p {
		color: white;
	}
}

